fixed letter-spacing for titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ font-family: "Raleway", sans-serif;
     font-weight: 700;
     line-height: 1.07;
     text-align: center;
+    letter-spacing: 0.02em;
     color: #ffff;
 }
 
@@ -79,7 +80,7 @@ font-family: "Raleway", sans-serif;
 }
 
 .qualities{
-
+    letter-spacing: 0.02em;
 }
 
 .qualities-title{
